# python-alfresco-mcp-server

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  claude-desktop-config-pipx-windows.json  claude-desktop-config-user-macos.json  claude-desktop-config-uv-macos.json  claude-desktop-config-uv-windows.json  claude-desktop-config-uvx-macos.json  claude-desktop-config-uvx-windows.json  config.yaml  mcp-inspector-http-pipx-config.json  mcp-inspector-http-uv-config.json  mcp-inspector-http-uvx-config.json  mcp-inspector-stdio-config.json  mcp-inspector-stdio-pipx-config.json  prompts-for-claude.md  pyproject.toml  pytest.ini  run_server.py  sample-dot-env.txt
alfresco_mcp_server/: __init__.py  config.py  fastapi_transport.py  fastmcp_server.py  main.py  server.py  tools.py
alfresco_mcp_server/prompts/: __init__.py  search_and_analyze.py
alfresco_mcp_server/resources/: __init__.py  repository_resources.py
alfresco_mcp_server/tools/: __init__.py
alfresco_mcp_server/tools/core/: __init__.py  browse_repository.py  cancel_checkout.py  checkin_document.py  checkout_document.py  create_folder.py  delete_node.py  download_document.py  get_node_properties.py  update_node_properties.py  upload_document.py
alfresco_mcp_server/tools/search/: __init__.py  advanced_search.py  cmis_search.py  search_by_metadata.py  search_content.py
alfresco_mcp_server/utils/: __init__.py  connection.py  file_type_analysis.py  json_utils.py
docs/: README.md  api_reference.md  claude_desktop_setup.md  client_configurations.md  configuration_guide.md  install_with_pip_pipx.md  mcp_inspector_setup.md  quick_start_guide.md  testing_guide.md  troubleshooting.md
examples/: README.md  batch_operations.py  document_lifecycle.py  error_handling.py  examples_summary.md  quick_start.py  transport_examples.py
python_alfresco_api/: client_factory.py
python_alfresco_api/clients/: search_client.py
scripts/: run_tests.py  test.bat
tests/: README.md  conftest.py  test_coverage.py  test_fastmcp_2_0.py  test_integration.py  test_unit_tools.py
tests-debug/: README.md
tests/mcp_specific/: MCP_INSPECTOR_CONNECTION.md  START_HTTP_SERVER.md  START_MCP_INSPECTOR.md  TESTING_INSTRUCTIONS.md  mcp_testing_guide.md  test_http_server.ps1  test_with_mcp_inspector.md
